BASIC UI LOOK - Make tabs - Apply minimal functionality to tabs - Apply the scrolling effect to fragments on view pager - Make the data plans visible on top (with break) - Make the app cards visible - Remove excess buttons on Acrive DP page and a switch for all apps - Make the list of data plans visible on DPS page - Add the create button fab on DPS page and create a dialog to create data plan - Remove excess buttons and items on the settings page - Create the data plan view activity - Add data to the spinner in the create plan dialog and link the create button to data plan view activity - Add the date and time pick functionality of the create plan dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">DeePee</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="data_type">
+        <item>WI-FI</item>
+        <item>Mobile Data</item>
+    </string-array>
 </resources>
