Refining and testing local database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string-array name="data_type">
         <item>WI-FI</item>
         <item>Mobile Data</item>
+        <item>Wifi and Mobile Data</item>
     </string-array>
 </resources>
